--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <div class="overlay-content">
         <h1>Game Over</h1>
         <p id="finalScore"></p>
-        <p>Press <strong>R</strong> to restart</p>
+        <p>Press <strong>R</strong> or tap to restart</p>
+        <button id="restartBtn" class="restart-btn">Restart</button>
       </div>
     </div>
 
