fix dinosaur sprite

--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
 
     <div class="game" id="game" role="application" aria-label="Mario jumping game">
       <div class="ground"></div>
-      <div class="mario" id="mario">
+      <div class="mario sprite" id="mario">
         <span class="eye left"></span>
         <span class="eye right"></span>
+        <span class="cheek"></span>
         <span class="saddle"></span>
+        <span class="snout"></span>
+        <span class="tooth left"></span>
+        <span class="tooth right"></span>
+        <span class="tail"></span>
+        <span class="spot s1"></span>
+        <span class="spot s2"></span>
         <span class="arm left"></span>
         <span class="arm right"></span>
         <span class="leg left"></span>
