--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="hud">
       <div id="score">Score: 0</div>
       <div id="speedLabel">Speed</div>
+      <div id="highScore">High: 0</div>
     </div>
 
     <div class="game" id="game" role="application" aria-label="Mario jumping game">
@@ -39,6 +40,7 @@
         <h1>Game Over</h1>
         <p id="finalScore"></p>
         <p>Press <strong>R</strong> or tap to restart</p>
+        <div id="highScoresList" class="highscores"></div>
         <button id="restartBtn" class="restart-btn">Restart</button>
       </div>
     </div>
